register previous button

--- a/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/bailleur-register/pages/steps/activity/activity.component.html
@@ -1,5 +1,4 @@
-<div class="mt-5 md:mt-0 md:col-span-2 bg-white">
-  <div class="text-black text-3xl font-extrabold mt-20 mb-10">Activité professionelle</div>
+  <div class="text-black text-3xl font-extrabold  mb-10">Activité professionelle</div>
   <form [formGroup]="activityForm">
     <div class="grid grid-cols-6 gap-6">
       <div class="col-span-6 sm:col-span-3">
@@ -228,4 +227,3 @@
 
     </div>
   </form>
-</div>
