--- a/src/app/modules/register/bailleur-register/pages/bailleur-register/bailleur-register.component.html
+++ b/src/app/modules/register/bailleur-register/pages/bailleur-register/bailleur-register.component.html
@@ -1,160 +1,173 @@
 <div class="min-h-screen bg-white flex">
-    <div class="hidden lg:block relative w-1/2  flex-1 bg-blue-light text-center ">
-      <div class="mx-auto w-full sticky top-20">
-        <div class="m-20">
-          <img class="w-auto ml-8" src="../../../../../assets/images/logo.png">
-          <h2 class="mt-6 text-2xl  text-gray ">
-            Le premier réseau immobilier qui te fait gagner du temps
-          </h2>
-        </div>
-        <div class="m-12">
-          <img class="mx-auto" height="400" width="450"
-            src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/7.png">
-        </div>
+  <div class="hidden lg:block relative w-1/2  flex-1 bg-blue-light text-center ">
+    <div class="mx-auto w-full sticky top-20">
+      <div class="m-20">
+        <img class="w-auto ml-8" src="../../../../../assets/images/logo.png">
+        <h2 class="mt-6 text-2xl  text-gray ">
+          Le premier réseau immobilier qui te fait gagner du temps
+        </h2>
       </div>
-  
-    </div>
-    <div class="flex-1 flex h-full flex-col justify-center w-1/2  py-6 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
-  
-      <div class="text-right mb-2">
-        <a class="inline-flex items-center py-2  text-xl text-blue-2 cursor-pointer hover:bg-blue-2" routerLink="/login">
-          Se connecter
-        </a>
-  
+      <div class="m-12">
+        <img class="mx-auto" height="400" width="450"
+          src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/7.png">
       </div>
-      <!-- This example requires Tailwind CSS v2.0+ -->
-      <nav aria-label="Progress" class="mb-6">
-        <ol class="flex items-center">
-          <li class="relative pr-8 sm:pr-20">
-            <!-- Completed Step -->
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 border-dashed w-full bg-gray-200"></div>
-            </div>
-            <a routerLink="/register/bailleur/about" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
-              <svg *ngIf="activeRoute=='/register/about'; else rab" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #rab>
-                <span class=" rounded-full" aria-hidden="true">1</span>
-              </ng-template>
-  
-              <span class="sr-only">Step 1</span>
-            </a>
-          </li>
-  
-        <!--  <li class="relative pr-8 sm:pr-20">
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 w-full bg-gray-200"></div>
-            </div>
-            <a routerLink="/register/bailleur/activity" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
-              <svg *ngIf="activeRoute=='/register/activity'; else rac" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #rac>
-                <span class=" rounded-full" aria-hidden="true">2</span>
-              </ng-template>
-  
-              <span class="sr-only">Step 2</span>
-            </a>
-          </li> -->
-  
-          <li class="relative pr-8 sm:pr-20">
-            <!-- Current Step -->
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 w-full bg-gray-200"></div>
-            </div>
-            <a routerLink="/register/bailleur/address" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-indigo-200 rounded-full"
-              aria-current="step">
-              <svg *ngIf="activeRoute=='/register/bailleur/address'; else rad" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #rad>
-                <span class=" rounded-full" aria-hidden="true">2</span>
-              </ng-template>
-              <span class="sr-only">Step 2</span>
-            </a>
-          </li>
-  
-          <li class="relative pr-8 sm:pr-20">
-            <!-- Current Step -->
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 w-full bg-gray-200"></div>
-            </div>
-            <a routerLink="/register/bailleur/another" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-indigo-200 rounded-full"
-              aria-current="step">
-              <svg *ngIf="activeRoute=='/register/bailleur/another'; else ran" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #ran>
-                <span class=" rounded-full" aria-hidden="true">3</span>
-              </ng-template>
-              <span class="sr-only">Step 3</span>
-            </a>
-          </li>
-  
-          <li class="relative pr-8 sm:pr-20">
-            <!-- Completed Step -->
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 w-full bg-gray-200"></div>
-            </div>
-            <a routerLink="/register/bailleur/property" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
-              <!-- Heroicon name: solid/check -->
-              <svg *ngIf="activeRoute=='/register/bailleur/property'; else rp" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #rp>
-                <span class=" rounded-full" aria-hidden="true">4</span>
-              </ng-template>
-              <span class="sr-only">Step 4</span>
-            </a>
-          </li>
-  
-          <li class="relative">
-            <!-- Completed Step -->
-            <div class="absolute inset-0 flex items-center" aria-hidden="true">
-              <div class="h-0.5 w-full bg-indigo-600"></div>
-            </div>
-            <a routerLink="/register/bailleur/activity" routerLinkActive="dotted-color"
-              class="relative w-8 h-8 flex items-center justify-center bg-white border-2 border-gray-300 rounded-full hover:border-gray-400">
-              <svg *ngIf="activeRoute=='/register/bailleur/activity'; else rr" class="w-5 h-5 text-white"
-                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                  clip-rule="evenodd" />
-              </svg>
-              <ng-template #rr>
-                <span class=" rounded-full" aria-hidden="true">5</span>
-              </ng-template>
-  
-              <span class="sr-only">Step 5</span>
-            </a>
-          </li>
-  
-        </ol>
-      </nav>
-  
-      <router-outlet></router-outlet>
-  
     </div>
-  
+
   </div>
+  <div class="flex-1 flex h-full flex-col justify-center w-1/2  py-6 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+
+    <div class="text-right mb-2">
+      <a class="inline-flex items-center py-2  text-xl text-blue-2 cursor-pointer hover:bg-blue-2" routerLink="/login">
+        Se connecter
+      </a>
+
+    </div>
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <nav aria-label="Progress" class="flex  justify-center">
+      <ol role="list" class="flex items-center ">
+        <li class="relative pr-5 md:pr-14">
+          <div class=" absolute h-0.5 w-full 		 bottom-1/2  border-dashed	  border-b-2 border-gray-400	"
+            aria-hidden="true">
+          </div>
+          <a href="#" class="relative flex items-center group">
+            <span class="h-9 flex items-center">
+              <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
+                <!-- Heroicon name: solid/check -->
+                <svg *ngIf="user.firstName" class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                    clip-rule="evenodd" />
+                </svg>
+                <span *ngIf="!user.firstName" class="h-9 flex items-center">
+                  <span routerLink="/register/bailleur/about" [routerLinkActive]="['bg-blue-2','border-none']"
+                    class="relative z-10 w-8 h-8 flex items-center bg-white  justify-center border-2 border-gray-400  rounded-full ">
+                    <!-- Heroicon name: solid/check -->
+                    <span routerLink="/register/bailleur/about" [routerLinkActive]="['text-white']"
+                      class="text-gray-400 text-base popping font-bold">1</span>
+                  </span>
+                </span>
+              </span>
+            </span>
+
+          </a>
+        </li>
+        <li class="relative pr-5 md:pr-14">
+          <!-- Current Step -->
+          <!-- Completed Step -->
+          <div class=" absolute h-0.5 w-full bottom-1/2  border-dashed	  border-b-2 border-gray-400	"
+            aria-hidden="true">
+          </div>
+          <a href="#" class="relative flex items-center group" aria-current="step">
+            <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
+              <!-- Heroicon name: solid/check -->
+              <svg *ngIf="user.address && user.address.nationality" class="w-5 h-5 text-white"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span *ngIf="user.address && !user.address.nationality" class="h-9 flex items-center">
+                <span routerLink="/register/bailleur/address" [routerLinkActive]="['bg-blue-2','border-none']"
+                  class="relative z-10 w-8 h-8 flex items-center bg-white  justify-center border-2 border-gray-400  rounded-full ">
+                  <!-- Heroicon name: solid/check -->
+                  <span routerLink="/register/bailleur/address" [routerLinkActive]="['text-white']"
+                    class="text-gray-400 text-base popping font-bold">2</span>
+                </span>
+              </span>
+            </span>
+
+          </a>
+        </li>
+        <li class="relative pr-5 md:pr-14">
+          <!-- Completed Step -->
+          <div class=" absolute h-0.5 w-full bottom-1/2  border-dashed	  border-b-2 border-gray-400	"
+            aria-hidden="true">
+          </div>
+          <a class="relative flex items-center group" aria-current="step">
+            <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
+              <!-- Heroicon name: solid/check -->
+              <svg *ngIf="user.other && user.other.civilLiabilityInsurance" class="w-5 h-5 text-white"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span *ngIf="user.other && !user.other.civilLiabilityInsurance" class="h-9 flex items-center">
+                <span routerLink="/register/bailleur/other" [routerLinkActive]="['bg-blue-2','border-none']"
+                  class="relative z-10 w-8 h-8 flex items-center bg-white  justify-center border-2 border-gray-400  rounded-full ">
+                  <!-- Heroicon name: solid/check -->
+                  <span routerLink="/register/bailleur/other" [routerLinkActive]="['text-white']"
+                    class="text-gray-400 text-base popping font-bold">3</span>
+                </span>
+              </span>
+            </span>
+          </a>
+        </li>
+
+
+
+        <li class="relative pr-5 md:pr-14">
+          <!-- Completed Step -->
+          <div class=" absolute h-0.5 w-full bottom-1/2  border-dashed	  border-b-2 border-gray-400	"
+            aria-hidden="true">
+          </div>
+          <a href="#" class="relative flex items-center group" aria-current="step">
+            <a class="relative flex items-center group" aria-current="step">
+              <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
+                <!-- Heroicon name: solid/check -->
+                <svg *ngIf="user.property && user.property.currentDonor" class="w-5 h-5 text-white"
+                  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                    clip-rule="evenodd" />
+                </svg>
+                <span *ngIf="user.property && !user.property.currentDonor" class="h-9 flex items-center">
+                  <span routerLink="/register/bailleur/property" [routerLinkActive]="['bg-blue-2','border-none']"
+                    class="relative z-10 w-8 h-8 flex items-center bg-white  justify-center border-2 border-gray-400  rounded-full ">
+                    <!-- Heroicon name: solid/check -->
+                    <span routerLink="/register/bailleur/property" [routerLinkActive]="['text-white']"
+                      class="text-gray-400 text-base popping font-bold">4</span>
+                  </span>
+                </span>
+              </span>
+            </a>
+          </a>
+        </li>
+
+        <li class="relative pr-5 md:pr-14">
+          <!-- Completed Step -->
+
+          <a href="#" class="relative flex items-center group" aria-current="step">
+            <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
+              <!-- Heroicon name: solid/check -->
+              <svg *ngIf="user.profession && user.profession.profession" class="w-5 h-5 text-white"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span *ngIf="user.profession && !user.profession.profession" class="h-9 flex items-center">
+                <span routerLink="/register/bailleur/activity" [routerLinkActive]="['bg-blue-2','border-none']"
+                  class="relative z-10 w-8 h-8 flex items-center bg-white  justify-center border-2 border-gray-400  rounded-full ">
+                  <!-- Heroicon name: solid/check -->
+                  <span routerLink="/register/bailleur/activity" [routerLinkActive]="['text-white']"
+                    class="text-gray-400 text-base popping font-bold">5</span>
+                </span>
+              </span>
+            </span>
+
+          </a>
+        </li>
+
+
+      </ol>
+    </nav>
+    <div class="mt-16  md:col-span-2 bg-white ">
+      <router-outlet></router-outlet>
+    </div>
+
+
+  </div>
+
+</div>
